<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.sergueik.selenium</groupId>
  <artifactId>selenium_cdp</artifactId>
  <packaging>jar</packaging>
  <version>0.85.0-SNAPSHOT</version>
  <name>selenum_cdp</name>
  <description>testing new Chrome Dev Tools bridge offered by Selenium 4.x </description>
  <url>http://maven.apache.org</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <commons-codec.version>1.13</commons-codec.version>
    <commons-collections4.version>4.2</commons-collections4.version>
    <commons-exec.version>1.3</commons-exec.version>
    <commons-io.version>2.7</commons-io.version>
    <commons-lang.version>2.6</commons-lang.version>
    <junit.version>4.13.1</junit.version>
    <json.version>20231013</json.version>
    <hamcrest-all.version>1.3</hamcrest-all.version>
    <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
    <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
    <pdfbox.version>2.0.27</pdfbox.version>
    <selenium.version>4.34.0</selenium.version>
    <selenium-devtools-v138.version>${selenium.version}</selenium-devtools-v138.version>
    <java.version>1.8</java.version>
    <gson.version>2.8.9</gson.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>${json.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pdfbox</groupId>
      <artifactId>pdfbox</artifactId>
      <version>${pdfbox.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>${hamcrest-all.version}</version>
      <!-- NOTE:  
        specifying scope is unsafe when refactoring 
	from src/test/java/$package/$Class to 
	src/main/java/$package/$class  - will not find references
	-->
      <!-- 
	   <scope>test</scope> 
	 -->
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-api</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v137</artifactId>
        </exclusion>

        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v136</artifactId>
        </exclusion>

        <exclusion>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-devtools-v135</artifactId>
        </exclusion>

      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-remote-driver</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-chrome-driver</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>${commons-collections4.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>${commons-codec.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>${commons-lang.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-exec</artifactId>
      <version>${commons-exec.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
      <exclusions>
        <exclusion>
          <!-- exclude side by side versions of guava jar from gson -->
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <goals>
          <goal>compile</goal>
        </goals>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${encoding}</encoding>
          <!-- On windows one needs to update console code page outside of maven
to work with cyrillic pages:
chcp 65001
set JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF-8
rem ${encoding}
 -->
          <compilerArgument>-Xlint:all</compilerArgument>
          <compilerArgument>-Xlint:deprecation</compilerArgument>
          <compilerArgument>-Xlint:-processing</compilerArgument>
          <!-- NOTE: some compiler optimizatino flags not recognized on JDK 1.8.0.101 and were added in later builds e.g. 1.8.0.151:  
                  Fatal error compiling: 
                  invalid flag: -XX:+AggressiveUnboxing
                  invalid flag: -XX:+AggressiveOpts
                  invalid flag: -XX:+UnlockExperimentalVMOptions
                  -->
          <!--
          <compilerArgument>-XX:+UnlockExperimentalVMOptions</compilerArgument>
          <compilerArgument>-XX:+AggressiveOpts</compilerArgument>
	  <compilerArgument>-XX:+AggressiveUnboxing</compilerArgument>
	  -->
          <!--
   <compilerArgument>-Dfile.encoding=${encoding}</compilerArgument>
Fatal error compiling: invalid flag: -Dfile.encoding=UTF-8 -> [Help 1]
-->
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${maven-dependency-plugin.version}</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <repository>
      <id>osgeo</id>
      <name>osgeo repo</name>
      <url>https://download.osgeo.org/webdav/geotools/</url>
    </repository>
    <repository>
      <id>seasar</id>
      <name>seasar repo</name>
      <url>https://www.seasar.org/maven/maven2</url>
    </repository>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com/</url>
    </repository>
    <!-- 'repo' folder is for non-standard jars that are not available on the public maven repositories -->
    <repository>
      <id>project.local</id>
      <name>project</name>
      <url>file:${project.basedir}/repo</url>
    </repository>
  </repositories>
</project>
